--- a/catalogo/templates/catalogo/livros/listar_livros.html
+++ b/catalogo/templates/catalogo/livros/listar_livros.html
@@ -8,33 +8,45 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
 <body>
-    {% include 'catalogo/reusable/header.html' %}
-    
-    <div class="container mt-5">
-        <h2 class="mb-4">Lista de Livros Disponíveis</h2>
-        <div class="row">
-            {% for livro in livros %}
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">{{ livro.titulo }}</h5>
-                            <p class="card-text"><strong>Autor:</strong> {{ livro.autor.nome }}</p>
-                            <p class="card-text"><strong>Editora:</strong> {{ livro.editora.nome }}</p>
-                            <p class="card-text"><strong>Gênero:</strong> {{ livro.genero.nome }}</p>
-                            <p class="card-text"><strong>Ano de Publicação:</strong> {{ livro.ano_publicacao }}</p>
-                            <p class="card-text"><strong>Descrição:</strong> {{ livro.descricao|truncatechars:20 }}{% if livro.descricao|length > 20 %}...{% endif %}</p>
-                            <div class="d-flex justify-content-between">
-                                <a href="{% url 'detalhes_livro' livro.pk %}" class="btn btn-sm btn-success">
-                                    <i class="bi bi-info-circle"></i> Detalhes
-                                </a>
-                            </div>
+{% include 'catalogo/reusable/header.html' %}
+
+<div class="container mt-5">
+    <h2 class="mb-4">Lista de Livros Disponíveis</h2>
+    <div class="row">
+        {% for livro in livros %}
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ livro.titulo }}</h5>
+                        <p class="card-text"><strong>Autor:</strong> {{ livro.autor.nome }}</p>
+                        <p class="card-text"><strong>Editora:</strong> {{ livro.editora.nome }}</p>
+                        <p class="card-text"><strong>Gênero:</strong> {{ livro.genero.nome }}</p>
+                        <p class="card-text"><strong>Ano de Publicação:</strong> {{ livro.ano_publicacao }}</p>
+                        <p class="card-text"><strong>Descrição:</strong>
+                            {{ livro.descricao|truncatechars:20 }}{% if livro.descricao|length > 20 %}...{% endif %}</p>
+                    
+                        <p class="card-text"><strong>Tags:</strong>
+                            {% if livro.tags.all %}
+                                {% for tag in livro.tags.all %}
+                                    {{ tag.nome }}{% if not forloop.last %}, {% endif %}
+                                {% endfor %}
+                            {% else %}
+                                Nenhuma tag disponível.
+                            {% endif %}
+                        </p>
+
+                        <div class="d-flex justify-content-between">
+                            <a href="{% url 'detalhes_livro' livro.pk %}" class="btn btn-sm btn-success">
+                                <i class="bi bi-info-circle"></i> Detalhes
+                            </a>
                         </div>
                     </div>
                 </div>
-            {% endfor %}
-        </div>
+            </div>
+        {% endfor %}
     </div>
+</div>
 
-    {% include 'catalogo/reusable/footer.html' %}
+{% include 'catalogo/reusable/footer.html' %}
 </body>
 </html>
