--- a/catalogo/templates/catalogo/reusable/header.html
+++ b/catalogo/templates/catalogo/reusable/header.html
@@ -3,29 +3,34 @@
         <h1>Biblioteca Trevizoli</h1>
         <nav>
             <ul class="nav">
-
                 <li class="nav-item">
                     <a class="nav-link text-white" href="{% url 'listar_livros' %}">Listar Livros</a>
                 </li>
-                
+
                 <li class="nav-item">
                     <a class="nav-link text-white" href="{% url 'listar_autores' %}">Listar Autores</a>
                 </li>
-                
+
                 <li class="nav-item">
                     <a class="nav-link text-white" href="{% url 'listar_generos_crud' %}">Gêneros - CRUD</a>
                 </li>
-                
+
                 <li class="nav-item">
                     <a class="nav-link text-white" href="{% url 'listar_editoras_crud' %}">Editoras - CRUD</a>
                 </li>
-                
+
                 <li class="nav-item">
                     <a class="nav-link text-white" href="{% url 'listar_livros_crud' %}">Livros - CRUD</a>
                 </li>
-                
+
                 <li class="nav-item">
                     <a class="nav-link text-white" href="{% url 'listar_autores_crud' %}">Autores - CRUD</a>
+                </li>
+
+               
+
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="{% url 'listar_tags_crud' %}">Tags - CRUD</a>
                 </li>
             </ul>
         </nav>
