--- a/catalogo/templates/catalogo/autores/listar_autores.html
+++ b/catalogo/templates/catalogo/autores/listar_autores.html
@@ -12,22 +12,41 @@
     
     <div class="container mt-5">
         <h2 class="mb-4">Lista de Autores</h2>
+        
+        <!-- Barra de Pesquisa -->
+        <form method="GET" action="{% url 'listar_autores' %}" class="mb-4">
+            <div class="input-group">
+                <input type="text" name="buscar" class="form-control" placeholder="Pesquise por nome ou biografia do autor" value="{{ request.GET.buscar }}">
+                <button class="btn btn-primary" type="submit">
+                    <i class="bi bi-search"></i> Pesquisar
+                </button>
+            </div>
+        </form>
+        
         <div class="row">
-            {% for autor in autores %}
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">{{ autor.nome }}</h5>
-                            <p class="card-text"><strong>Biografia:</strong> {{ autor.biografia|truncatechars:30 }}{% if autor.biografia|length > 30 %}...{% endif %}</p>
-                            <div class="d-flex justify-content-between">
-                                <a href="{% url 'detalhes_autor' autor.pk %}" class="btn btn-sm btn-success">
-                                    <i class="bi bi-info-circle"></i> Detalhes
-                                </a>
+            {% if autores %}
+                {% for autor in autores %}
+                    <div class="col-md-4 mb-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">{{ autor.nome }}</h5>
+                                <p class="card-text"><strong>Biografia:</strong> 
+                                    {{ autor.biografia|truncatechars:30 }}{% if autor.biografia|length > 30 %}...{% endif %}
+                                </p>
+                                <div class="d-flex justify-content-between">
+                                    <a href="{% url 'detalhes_autor' autor.pk %}" class="btn btn-sm btn-success">
+                                        <i class="bi bi-info-circle"></i> Detalhes
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
+                {% endfor %}
+            {% else %}
+                <div class="col-12">
+                    <p class="text-center">Nenhum autor encontrado para sua pesquisa.</p>
                 </div>
-            {% endfor %}
+            {% endif %}
         </div>
     </div>
 
