--- a/catalogo/templates/catalogo/livros/listar_livros.html
+++ b/catalogo/templates/catalogo/livros/listar_livros.html
@@ -16,7 +16,13 @@
     <!-- Barra de Pesquisa -->
     <form method="GET" action="{% url 'listar_livros' %}" class="mb-4">
         <div class="input-group">
-            <input type="text" name="buscar" class="form-control" placeholder="Pesquise por título, autor, editora, gênero ou tag" value="{{ request.GET.buscar }}">
+            <input type="text" name="buscar" class="form-control"
+                   placeholder="Pesquise por título, autor, editora, gênero ou tag" value="{{ request.GET.buscar }}">
+        
+            {% if request.GET.buscar %}
+                <a href="{% url 'listar_livros' %}" class="btn btn-secondary">Voltar</a>
+            {% endif %}
+        
             <button class="btn btn-primary" type="submit">
                 <i class="bi bi-search"></i> Pesquisar
             </button>
