--- a/catalogo/templates/catalogo/autores/deletar_autor.html
+++ b/catalogo/templates/catalogo/autores/deletar_autor.html
@@ -6,45 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deletar Autor</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
 <body>
 
-    <style>
-        main {
-            height: 800px;
-        }
+{% include 'catalogo/reusable/header.html' %}
 
-        .card {
-            margin-top: -300px;
-
-        }
-    </style>
-
-    {% include 'catalogo/reusable/header.html' %}
-
-    <main class="d-flex align-items-center justify-content-center">
-        <div class="container mt-5">
-            <div class="card">
-                <div class="card-header text-center">
-                    <h5>Confirmação de Deleção</h5>
-                </div>
-                <div class="card-body">
-                    <h6 class="text-danger">Tem certeza que deseja deletar o autor "{{ autor.nome }}"?</h6>
-                    <p>Esta ação não pode ser desfeita.</p>
-                    <form method="POST">
-                        {% csrf_token %}
-                        <div class="d-flex justify-content-between">
-                            <button type="submit" class="btn btn-danger">Deletar</button>
-                            <a href="{% url 'listar_autores_crud' %}" class="btn btn-secondary">Cancelar</a>
-                        </div>
-                    </form>
-                </div>
+<main class="d-flex align-items-center justify-content-center">
+    <div class="container mt-5">
+        <div class="card">
+            <div class="card-header text-center">
+                <h5>Confirmação de Deleção</h5>
+            </div>
+            <div class="card-body">
+                <h6 class="text-danger">Tem certeza que deseja deletar o autor "{{ autor.nome }}"?</h6>
+                <p>Esta ação não pode ser desfeita.</p>
+                <form method="POST">
+                    {% csrf_token %}
+                    <div class="d-flex justify-content-between">
+                        <button type="submit" class="btn btn-danger">Deletar</button>
+                        <a href="{% url 'listar_autores_crud' %}" class="btn btn-secondary">Cancelar</a>
+                    </div>
+                </form>
             </div>
         </div>
-    </main>
+    </div>
+</main>
 
-    {% include 'catalogo/reusable/footer.html' %}
+{% include 'catalogo/reusable/footer.html' %}
 </body>
 
 </html>
