--- a/catalogo/templates/catalogo/editoras/detalhes_editora.html
+++ b/catalogo/templates/catalogo/editoras/detalhes_editora.html
@@ -5,27 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalhes da Editora</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
 
-    <style>
-        main {
-            height: 800px;
-        }
-    </style>
-    
-    {% include 'catalogo/reusable/header.html' %}
+{% include 'catalogo/reusable/header.html' %}
 
-    <main class="container mt-5">
-        <h2>Detalhes da Editora</h2>
-        <ul class="list-group">
-            <li class="list-group-item"><strong>ID:</strong> {{ editora.id }}</li>
-            <li class="list-group-item"><strong>Nome:</strong> {{ editora.nome }}</li>
-            <li class="list-group-item"><strong>Endereço:</strong> {{ editora.endereco }}</li>
-        </ul>
-        <a href="{% url 'listar_editoras_crud' %}" class="btn btn-secondary mt-3">Voltar</a>
-    </main>
+<main class="container mt-5">
+    <h2>Detalhes da Editora</h2>
+    <ul class="list-group">
+        <li class="list-group-item"><strong>ID:</strong> {{ editora.id }}</li>
+        <li class="list-group-item"><strong>Nome:</strong> {{ editora.nome }}</li>
+        <li class="list-group-item"><strong>Endereço:</strong> {{ editora.endereco }}</li>
+    </ul>
+    <a href="{% url 'listar_editoras_crud' %}" class="btn btn-secondary mt-3">Voltar</a>
+</main>
 
-    {% include 'catalogo/reusable/footer.html' %}
+{% include 'catalogo/reusable/footer.html' %}
 </body>
 </html>
