--- a/catalogo/templates/catalogo/livros/criar_livro.html
+++ b/catalogo/templates/catalogo/livros/criar_livro.html
@@ -6,15 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Criar Livro</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
 <body>
-
-<style>
-    main {
-        height: 800px;
-    }
-</style>
 
 {% include 'catalogo/reusable/header.html' %}
 
@@ -85,7 +81,7 @@
             </select>
             <label for="floatingTag">Tag</label>
         </div>
-    
+
         <button type="submit" class="btn btn-success mt-3">Salvar</button>
         <a href="{% url 'listar_livros_crud' %}" class="btn btn-secondary mt-3">Voltar</a>
     </form>
