--- a/catalogo/templates/catalogo/tags/criar_tag.html
+++ b/catalogo/templates/catalogo/tags/criar_tag.html
@@ -6,15 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Criar Tag</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
 <body>
-
-<style>
-    main {
-        height: 800px;
-    }
-</style>
 
 {% include 'catalogo/reusable/header.html' %}
 
