Algumas correções básicas nos códigos

--- a/catalogo/templates/catalogo/autores/criar_autor.html
+++ b/catalogo/templates/catalogo/autores/criar_autor.html
@@ -12,7 +12,7 @@
 
 <body>
 
-{% include 'catalogo/reusable/header.html' %}
+{% include 'reusable/header.html' %}
 
 <main class="container mt-5">
     <form method="POST">
@@ -36,7 +36,7 @@
     </form>
 </main>
 
-{% include 'catalogo/reusable/footer.html' %}
+{% include 'reusable/footer.html' %}
 </body>
 
 </html>
