--- a/catalogo/templates/catalogo/generos/detalhes_genero.html
+++ b/catalogo/templates/catalogo/generos/detalhes_genero.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-{% include 'catalogo/reusable/header.html' %}
+{% include 'reusable/header.html' %}
 
 <main class="container mt-5">
     <h2>Detalhes do Gênero</h2>
@@ -21,6 +21,6 @@
     <a href="{% url 'listar_generos_crud' %}" class="btn btn-secondary mt-3">Voltar</a>
 </main>
 
-{% include 'catalogo/reusable/footer.html' %}
+{% include 'reusable/footer.html' %}
 </body>
 </html>
