--- a/catalogo/templates/catalogo/generos/editar_genero.html
+++ b/catalogo/templates/catalogo/generos/editar_genero.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-{% include 'catalogo/reusable/header.html' %}
+{% include 'reusable/header.html' %}
 
 <main class="container mt-5">
     <h2>Editar Gênero</h2>
@@ -27,7 +27,7 @@
     </form>
 </main>
 
-{% include 'catalogo/reusable/footer.html' %}
+{% include 'reusable/footer.html' %}
 
 </body>
 </html>
