--- a/catalogo/templates/catalogo/livros/listar_livros.html
+++ b/catalogo/templates/catalogo/livros/listar_livros.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
 <body>
-{% include 'catalogo/reusable/header.html' %}
+{% include 'reusable/header.html' %}
 
 <div class="container mt-5">
     <h2 class="mb-4">Lista de Livros Disponíveis</h2>
@@ -72,6 +72,6 @@
 </div>
 
 
-{% include 'catalogo/reusable/footer.html' %}
+{% include 'reusable/footer.html' %}
 </body>
 </html>
