--- a/contas/templates/contas/informacoes_usuario.html
+++ b/contas/templates/contas/informacoes_usuario.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-{% include 'catalogo/reusable/header.html' %}
+{% include 'reusable/header.html' %}
 
 <main>
     <div class="container">
@@ -22,7 +22,7 @@
     </div>
 </main>
 
-{% include 'catalogo/reusable/footer.html' %}
+{% include 'reusable/footer.html' %}
 
 </body>
 </html>
