--- a/catalogo/templates/catalogo/autores/detalhes_autor.html
+++ b/catalogo/templates/catalogo/autores/detalhes_autor.html
@@ -12,7 +12,7 @@
 
 <body>
 
-{% include 'catalogo/reusable/header.html' %}
+{% include 'reusable/header.html' %}
 
 <main class="container mt-5">
     <h2>{{ autor.nome }}</h2>
@@ -20,7 +20,7 @@
     <a href="{% url 'listar_autores' %}" class="btn btn-success">Voltar</a>
 </main>
 
-{% include 'catalogo/reusable/footer.html' %}
+{% include 'reusable/footer.html' %}
 
 </body>
 
