--- a/catalogo/templates/catalogo/autores/listar_autores.html
+++ b/catalogo/templates/catalogo/autores/listar_autores.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
 <body>
-{% include 'catalogo/reusable/header.html' %}
+{% include 'reusable/header.html' %}
 
 <div class="container mt-5">
     <h2 class="mb-4">Lista de Autores</h2>
@@ -55,6 +55,6 @@
     </div>
 </div>
 
-{% include 'catalogo/reusable/footer.html' %}
+{% include 'reusable/footer.html' %}
 </body>
 </html>
