--- a/catalogo/templates/catalogo/autores/listar_autores_crud.html
+++ b/catalogo/templates/catalogo/autores/listar_autores_crud.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    {% include 'catalogo/reusable/header.html' %}
+    {% include 'reusable/header.html' %}
 
     <div class="container mt-5">
         <h2 class="mb-4">Gerenciar Autores</h2>
@@ -58,7 +58,7 @@
         </table>
     </div>
 
-    {% include 'catalogo/reusable/footer.html' %}
+    {% include 'reusable/footer.html' %}
 
     <!-- Bootstrap JS Bundle (Inclui Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
