--- a/catalogo/templates/catalogo/editoras/criar_editora.html
+++ b/catalogo/templates/catalogo/editoras/criar_editora.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-{% include 'catalogo/reusable/header.html' %}
+{% include 'reusable/header.html' %}
 
 <main class="container mt-5">
     <h2>Criar Editora</h2>
@@ -34,6 +34,6 @@
     </form>
 </main>
 
-{% include 'catalogo/reusable/footer.html' %}
+{% include 'reusable/footer.html' %}
 </body>
 </html>
