--- a/catalogo/templates/catalogo/editoras/detalhes_editora.html
+++ b/catalogo/templates/catalogo/editoras/detalhes_editora.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-{% include 'catalogo/reusable/header.html' %}
+{% include 'reusable/header.html' %}
 
 <main class="container mt-5">
     <h2>Detalhes da Editora</h2>
@@ -22,6 +22,6 @@
     <a href="{% url 'listar_editoras_crud' %}" class="btn btn-secondary mt-3">Voltar</a>
 </main>
 
-{% include 'catalogo/reusable/footer.html' %}
+{% include 'reusable/footer.html' %}
 </body>
 </html>
