--- a/catalogo/templates/catalogo/editoras/editar_editora.html
+++ b/catalogo/templates/catalogo/editoras/editar_editora.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-{% include 'catalogo/reusable/header.html' %}
+{% include 'reusable/header.html' %}
 
 <main class="container mt-5">
     <h2>Editar Editora</h2>
@@ -34,7 +34,7 @@
     </form>
 </main>
 
-{% include 'catalogo/reusable/footer.html' %}
+{% include 'reusable/footer.html' %}
 
 </body>
 </html>
