--- a/catalogo/templates/catalogo/generos/deletar_genero.html
+++ b/catalogo/templates/catalogo/generos/deletar_genero.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-{% include 'catalogo/reusable/header.html' %}
+{% include 'reusable/header.html' %}
 
 <main class="container mt-5">
     <h2>Deletar Gênero</h2>
@@ -22,6 +22,6 @@
     </form>
 </main>
 
-{% include 'catalogo/reusable/footer.html' %}
+{% include 'reusable/footer.html' %}
 </body>
 </html>
