--- a/catalogo/templates/catalogo/generos/listar_generos_crud.html
+++ b/catalogo/templates/catalogo/generos/listar_generos_crud.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
 <body>
-    {% include 'catalogo/reusable/header.html' %}
+    {% include 'reusable/header.html' %}
     
     <div class="container mt-5">
         <h2 class="mb-4">Gerenciar Gêneros</h2>
@@ -49,6 +49,6 @@
         </table>
     </div>
 
-    {% include 'catalogo/reusable/footer.html' %}
+    {% include 'reusable/footer.html' %}
 </body>
 </html>
