--- a/catalogo/templates/catalogo/livros/deletar_livro.html
+++ b/catalogo/templates/catalogo/livros/deletar_livro.html
@@ -12,7 +12,7 @@
 
 <body>
 
-{% include 'catalogo/reusable/header.html' %}
+{% include 'reusable/header.html' %}
 
 <main class="d-flex align-items-center justify-content-center">
     <div class="container mt-5">
@@ -35,7 +35,7 @@
     </div>
 </main>
 
-{% include 'catalogo/reusable/footer.html' %}
+{% include 'reusable/footer.html' %}
 </body>
 
 </html>
