--- a/catalogo/templates/catalogo/livros/detalhes_livro.html
+++ b/catalogo/templates/catalogo/livros/detalhes_livro.html
@@ -12,7 +12,7 @@
 
 <body>
 
-{% include 'catalogo/reusable/header.html' %}
+{% include 'reusable/header.html' %}
 
 <main>
     <div class="container mt-5">
@@ -39,7 +39,7 @@
 </main>
 
 
-{% include 'catalogo/reusable/footer.html' %}
+{% include 'reusable/footer.html' %}
 
 </body>
 
