--- a/catalogo/templates/catalogo/livros/editar_livro.html
+++ b/catalogo/templates/catalogo/livros/editar_livro.html
@@ -12,7 +12,7 @@
 
 <body>
 
-{% include 'catalogo/reusable/header.html' %}
+{% include 'reusable/header.html' %}
 
 <main class="container mt-5">
     <h2>Editar Livro</h2>
@@ -87,7 +87,7 @@
     </form>
 </main>
 
-{% include 'catalogo/reusable/footer.html' %}
+{% include 'reusable/footer.html' %}
 
 </body>
 
