--- a/catalogo/templates/catalogo/tags/detalhes_tag.html
+++ b/catalogo/templates/catalogo/tags/detalhes_tag.html
@@ -12,7 +12,7 @@
 
 <body>
 
-{% include 'catalogo/reusable/header.html' %}
+{% include 'reusable/header.html' %}
 
 <main>
     <div class="container mt-5">
@@ -23,7 +23,7 @@
     </div>
 </main>
 
-{% include 'catalogo/reusable/footer.html' %}
+{% include 'reusable/footer.html' %}
 </body>
 
 </html>
