--- a/contas/templates/contas/login.html
+++ b/contas/templates/contas/login.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-{% include 'catalogo/reusable/header.html' %}
+{% include 'reusable/header.html' %}
 
 {% block content %}
     <main>
@@ -41,6 +41,6 @@
     </main>
 {% endblock %}
 
-{% include 'catalogo/reusable/footer.html' %}
+{% include 'reusable/footer.html' %}
 </body>
 </html>
