Adicionei o sistema de empréstimos ao sistema onde o usuário logado pode obter o livro para sua conta, e visualiza-lo em seu perfil, foi adicionado também algumas verificações no front-end limitando algumas opções para usuários não logados.

--- a/catalogo/templates/reusable/header.html
+++ b/catalogo/templates/reusable/header.html
@@ -53,12 +53,19 @@
 
                 {% if user.is_authenticated %}
                     <li class="nav-item">
+                        <a class="nav-link text-white" href="{% url 'meus_emprestimos' %}">
+                            <i class="bi bi-book"></i> Meus livros
+                        </a>
+                    </li>
+                {% endif %}
+
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
                         <a class="nav-link text-white" href="{% url 'logout' %}">
                             <i class="fas fa-sign-out-alt"></i> Sair
                         </a>
                     </li>
                 {% endif %}
-
             </ul>
         </nav>
     </div>
