--- a/catalogo/templates/catalogo/livros/listar_livros.html
+++ b/catalogo/templates/catalogo/livros/listar_livros.html
@@ -58,6 +58,11 @@
                                 <a href="{% url 'detalhes_livro' livro.pk %}" class="btn btn-sm btn-success">
                                     <i class="bi bi-info-circle"></i> Detalhes
                                 </a>
+                                {% if user.is_authenticated %}
+                                    <a href="{% url 'obter_livro' livro.pk %}" class="btn btn-sm btn-primary">
+                                        <i class="bi bi-book"></i> Obter Livro
+                                    </a>
+                                {% endif %}
                             </div>
                         </div>
                     </div>
@@ -70,7 +75,6 @@
         {% endif %}
     </div>
 </div>
-
 
 {% include 'reusable/footer.html' %}
 </body>
