--- a/contas/templates/contas/login.html
+++ b/contas/templates/contas/login.html
@@ -6,39 +6,48 @@
     <title>Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
 </head>
-<body>
+<body class="fundo">
 
 {% include 'reusable/header.html' %}
 
 {% block content %}
-    <main>
-        <div class="container mt-5">
-            <h2 class="text-center">Login</h2>
-            <form method="post" class="mt-4">
-                {% csrf_token %}
-                <div class="mb-3">
-                    <label for="username" class="form-label">Username:</label>
-                    <input type="text" name="username" id="username" class="form-control" required>
-                </div>
+    <div class="container-principal">
+        <div class="container-secundario">
 
-                <div class="mb-3">
-                    <label for="password" class="form-label">Password:</label>
-                    <input type="password" name="password" id="password" class="form-control" required>
-                </div>
+            <div class="primeira-coluna">
+                <h2 class="titulo titulo-primario">Seja muito bem-vindo!</h2>
+                <p class="descricao descricao-primaria">Para se manter conectado conosco</p>
+                <p class="descricao descricao-primaria">Faça seu login com suas informações pessoais!</p>
+            </div>
 
-                <div class="text-center">
-                    <button type="submit" class="btn btn-primary">Login</button>
-                </div>
+            <div class="segunda-coluna">
 
-                <div class="text-center">
-                    <a href="{% url 'register' %}">Registre-se</a>
-                </div>
+                <h2 class="titulo titulo-secundario">Faça Seu login:</h2>
 
-            </form>
+                <form class="formulario" action="" method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <label class="rotulo-input" for="">
+                        <i class="far fa-envelope icone-modificado"><img src="pags/img/log.png" width="25px" alt=""></i>
+                        <input type="text" name="username" id="username" class="form-control" required>
+                    </label>
+
+                    <label class="rotulo-input" for="">
+                        <i class="fas fa-lock icone-modificado"><img src="pags/img/senha.png" width="25px" alt=""></i>
+                        <input type="password" name="password" id="password" class="form-control" required><br>
+                    </label>
+
+                    <button type="submit" class="btn-login">Login</button>
+
+
+                    <a href="{% url 'register' %}" class="btn-login-cadastro">
+                        <p>Cadastre-se</p>
+                    </a>
+                </form>
+            </div>
         </div>
-    </main>
+    </div>
 {% endblock %}
 
 {% include 'reusable/footer.html' %}
