--- a/catalogo/templates/reusable/header.html
+++ b/catalogo/templates/reusable/header.html
@@ -1,5 +1,6 @@
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <header class="bg-dark text-white py-3">
@@ -17,31 +18,19 @@
                         <i class="fas fa-user"></i> Listar Autores
                     </a>
                 </li>
+                
                 {% if user.is_staff %}
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="{% url 'listar_generos_crud' %}">
-                            <i class="fas fa-tags"></i> Gêneros - CRUD
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="fas fa-cogs"></i> Gestão - CRUD
                         </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="{% url 'listar_editoras_crud' %}">
-                            <i class="fas fa-building"></i> Editoras - CRUD
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="{% url 'listar_livros_crud' %}">
-                            <i class="fas fa-book-open"></i> Livros - CRUD
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="{% url 'listar_autores_crud' %}">
-                            <i class="fas fa-user-edit"></i> Autores - CRUD
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="{% url 'listar_tags_crud' %}">
-                            <i class="fas fa-tag"></i> Tags - CRUD
-                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="{% url 'listar_generos_crud' %}"><i class="fas fa-tags"></i> Gêneros</a></li>
+                            <li><a class="dropdown-item" href="{% url 'listar_editoras_crud' %}"><i class="fas fa-building"></i> Editoras</a></li>
+                            <li><a class="dropdown-item" href="{% url 'listar_livros_crud' %}"><i class="fas fa-book-open"></i> Livros</a></li>
+                            <li><a class="dropdown-item" href="{% url 'listar_autores_crud' %}"><i class="fas fa-user-edit"></i> Autores</a></li>
+                            <li><a class="dropdown-item" href="{% url 'listar_tags_crud' %}"><i class="fas fa-tag"></i> Tags</a></li>
+                        </ul>
                     </li>
                 {% endif %}
 
@@ -70,3 +59,5 @@
         </nav>
     </div>
 </header>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
