--- a/contas/templates/contas/informacoes_usuario.html
+++ b/contas/templates/contas/informacoes_usuario.html
@@ -5,20 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Informações do Usuário</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
 
 {% include 'reusable/header.html' %}
 
 <main>
-    <div class="container">
-        <h1>Informações do Usuário</h1>
-        <p><strong>Nome:</strong> {{ user.get_full_name }}</p>
-        <p><strong>Email:</strong> {{ user.email }}</p>
-        <p><strong>Username:</strong> {{ user.username }}</p>
-        <p><strong>Data de Cadastro:</strong> {{ user.date_joined }}</p>
+    <div class="container my-5">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="card shadow-lg">
+                    <div class="card-header bg-dark text-white text-center">
+                        <h2 class="mb-0">Informações do Usuário</h2>
+                    </div>
+                    <div class="card-body">
+                        <div class="mb-3">
+                            <p><strong>Nome:</strong> {{ user.get_full_name }}</p>
+                        </div>
+                        <div class="mb-3">
+                            <p><strong>Email:</strong> {{ user.email }}</p>
+                        </div>
+                        <div class="mb-3">
+                            <p><strong>Username:</strong> {{ user.username }}</p>
+                        </div>
+                        <div class="mb-3">
+                            <p><strong>Data de Cadastro:</strong> {{ user.date_joined|date:"d/m/Y H:i" }}</p>
+                        </div>
+                    </div>
+                    <div class="card-footer text-center">
+                        <a class="btn btn-primary mx-2">Editar Perfil</a>
+                        <a class="btn btn-secondary mx-2">Alterar Senha</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </main>
 
