--- a/catalogo/templates/reusable/header.html
+++ b/catalogo/templates/reusable/header.html
@@ -18,18 +18,24 @@
                         <i class="fas fa-user"></i> Listar Autores
                     </a>
                 </li>
-                
+
                 {% if user.is_staff %}
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown"
+                           aria-expanded="false">
                             <i class="fas fa-cogs"></i> Gestão - CRUD
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="{% url 'listar_generos_crud' %}"><i class="fas fa-tags"></i> Gêneros</a></li>
-                            <li><a class="dropdown-item" href="{% url 'listar_editoras_crud' %}"><i class="fas fa-building"></i> Editoras</a></li>
-                            <li><a class="dropdown-item" href="{% url 'listar_livros_crud' %}"><i class="fas fa-book-open"></i> Livros</a></li>
-                            <li><a class="dropdown-item" href="{% url 'listar_autores_crud' %}"><i class="fas fa-user-edit"></i> Autores</a></li>
-                            <li><a class="dropdown-item" href="{% url 'listar_tags_crud' %}"><i class="fas fa-tag"></i> Tags</a></li>
+                            <li><a class="dropdown-item" href="{% url 'listar_generos_crud' %}"><i
+                                    class="fas fa-tags"></i> Gêneros</a></li>
+                            <li><a class="dropdown-item" href="{% url 'listar_editoras_crud' %}"><i
+                                    class="fas fa-building"></i> Editoras</a></li>
+                            <li><a class="dropdown-item" href="{% url 'listar_livros_crud' %}"><i
+                                    class="fas fa-book-open"></i> Livros</a></li>
+                            <li><a class="dropdown-item" href="{% url 'listar_autores_crud' %}"><i
+                                    class="fas fa-user-edit"></i> Autores</a></li>
+                            <li><a class="dropdown-item" href="{% url 'listar_tags_crud' %}"><i class="fas fa-tag"></i>
+                                Tags</a></li>
                         </ul>
                     </li>
                 {% endif %}
