--- a/contas/templates/contas/login.html
+++ b/contas/templates/contas/login.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
 </head>
@@ -49,6 +51,8 @@
         </div>
     </div>
 {% endblock %}
+
+{% include 'reusable/notificacoes.html' %}
 
 {% include 'reusable/footer.html' %}
 </body>
