Realizei algumas correções de bugs no front-end

--- a/catalogo/templates/reusable/pag_erro.html
+++ b/catalogo/templates/reusable/pag_erro.html
@@ -3,13 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <title>Página de Erro</title>
 </head>
 <body>
-<div class="container">
-    <h1>Acesso Negado</h1>
-    <p>Você não tem permissão para acessar esta página.</p>
-    <a href="{% url 'listar_livros' %}">Voltar para a página inicial</a>
-</div>
+
+{% include 'reusable/header.html' %}
+
+<main>
+    <div class="container">
+        <h1>Acesso Negado</h1>
+        <p>Você não tem permissão para acessar esta página.</p>
+        <a href="{% url 'listar_livros' %}">Voltar para a página inicial</a>
+    </div>
+</main>
+
+{% include 'reusable/footer.html' %}
+
 </body>
 </html>
